--- a/index.html
+++ b/index.html
@@ -1,30 +1,8 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Amelia Tarren</title>
-		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I'm Amelia Tarren!</h1>
-				<p>I'm best known as a human from planet Earth <em> I enjoy thinking deeply about math and various geometric probems requiring human exertion</em>  <a href="/about">Read more about my life...</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:amelia.tarren@gmail.com">email</a></li>
-        		<li><a href="https://github.com/atarren">github.com/atarren</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
+---
+layout: default
+title: Amelia Tarren, Human
+---
+<div class="blurb">
+	<h1>Hi there, I'm Amelia Tarren!</h1>
+	<p>Mostly looking for excuses to problem solve or send postcards <em>Climbing and silliest nonsense serve as compulsive pasttimes</em> All good things <a href="/about">Read more about my life...</a></p>
+</div><!-- /.blurb -->
