--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Amelia Tarren, Human
+title: Amelia Tarren, Human on Planet earth...
 ---
 <div class="blurb">
 	<h1>Hi there, I'm Amelia Tarren!</h1>
