--- a/index.html
+++ b/index.html
@@ -5,4 +5,8 @@ title: Amelia Tarren, Human on Planet earth...
 <div class="blurb">
 	<h1>Hi there, I'm Amelia Tarren!</h1>
 	<p>Mostly looking for excuses to problem solve or send postcards <em>Climbing and silliest nonsense serve as compulsive pasttimes</em> All good things <a href="/about">Read more about my life...</a></p>
+{% include image.html url="/images/ameliathatisme.jpg" description="Welcome! One of my absoloute favorite activities" %}
 </div><!-- /.blurb -->
+
+
+
