--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Hank Quinlan, Horrible Cop
+title: Amelia Tarren, Human
 ---
 <div class="blurb">
 	<h1>Hi there, I'm Amelia Tarren</h1>
