--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@ title: Amelia Tarren!
 ---
 <div class="blurb">
 	<h1>Hi there, I'm Amelia Tarren</h1>
-	<p>Mostly looking for excuses to problem solve. <em> All Good Things. </em> Most days.  <a href="/about">Read more about my life...</a></p>
+	<p>Mostly looking for excuses to problem solve. <em> All Good Things. </em> Most days.  <a href="/about">Read more about my background...</a></p>
 {% include image.html url="/images/amelia.jpeg" description="The backyard, amongst my favorite outdoor places!" %}
 </div><!-- /.blurb -->
