--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@ layout: default
 title: Amelia Tarren!
 ---
 <div class="blurb">
-	<h1>Hi there, I'm Amelia Tarren</h1>
-	<p>Mostly my motivations include looking for excuses to problem solve both in pure and applied mathematics as well as the occasional geometrically demanding rock climbing crux. <em> All Good Things. </em> Most days.  <a href="/about">Please feel welcome to read more about my background here...</a></p>
+	<h1>Amelia Tarren</h1>
+	<p> Mostly my motivations include looking for excuses to problem solve both in pure and applied mathematics as well as the occasional geometrically demanding rock climbing crux. <em> All Good Things. </em> Most days.  <a href="/about">Please feel welcome to read more about my background here...</a></p>
+	
+	<p><a href="/about">Please feel welcome to read more about my background here...</a></p>
 {% include image.html url="/images/amelia.jpeg" description="The backyard, amongst my favorite outdoor places!" %}
 </div><!-- /.blurb -->
