--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@ title: Amelia Tarren!
 ---
 <div class="blurb">
 	<h1>Amelia Tarren</h1>
+	
+	<p> Welcome!</p>
+	
 	<p> Mostly my motivations include looking for excuses to problem solve both in pure and applied mathematics as well as the occasional geometrically demanding rock climbing crux. <em> All Good Things. </em> Most days.</p>
 	
 	<p><a href="/about">Please feel welcome to read more about my background here...</a></p>
