--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@ title: Amelia Tarren!
 <div class="blurb">
 	<h1>Amelia Tarren</h1>
 	
+	{% include image.html url="/images/home.jpeg" description="University of Vermont"
+	
 	<p> Welcome!</p>
 	
 	<p> Mostly my motivations include looking for excuses to problem solve both in pure and applied mathematics as well as the occasional geometrically demanding rock climbing crux. <em> All Good Things. </em> Most days.</p>
