--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Amelia Tarren!
 <div class="blurb">
 	<h1>Amelia Tarren</h1>
 	
-	{% include image.html url="/images/home.jpeg" description="University of Vermont"
+	{% include image.html url="/images/home.jpeg" description="University of Vermont, Burlington"
 	
 	<p> Welcome!</p>
 	
