--- a/index.html
+++ b/index.html
@@ -11,4 +11,5 @@ title: Amelia Tarren!
 	
 	<p><a href="/about">Please feel welcome to read more about my background here...</a></p>
 {% include image.html url="/images/amelia.jpeg" description="The backyard, amongst my favorite outdoor places!" %}
+	{% include image.html url="/images/logo.png" description="" %}
 </div><!-- /.blurb -->
