--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@ title: Amelia Tarren!
 	<p> Mostly my motivations include looking for excuses to problem solve both in pure and applied mathematics as well as the occasional geometrically demanding rock climbing crux. <em> All Good Things. </em> Most days.</p>
 	
 	<p><a href="/about">Please feel welcome to read more about my background, click here...</a></p>
-{% include image.html url="/images/amelia.jpeg" description="The backyard, amongst my favorite outdoor places!" %}
+{% include image.html url="/images/amelia.jpeg" description="My backyard in Burlington,VT amongst my favorite outdoor places!" %}
 	{% include image.html url="/images/logo.png" description="" %}
 </div><!-- /.blurb -->
