--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: Amelia Tarren!
 	
 	<p> Welcome!</p>
 	
-	<p> Mostly my motivations include looking for excuses to problem solve both in pure and applied mathematics as well as the occasional geometrically demanding rock climbing crux. <em> All Good Things. </em> Most days.</p>
+	<p> Mostly my motivations include developing innovative solutions to tasks which employ technical and logic based skillsets, underpinned by a comittment to teamwork and diversity in work settings. I've worked in physics and environmental engineering sectors for the past 7 years. Also, I enjoy looking for excuses to problem solve both in pure and applied mathematics as well as the occasional geometrically demanding rock climbing crux. <em> All Wonderful Things. </em> Creativty and out of the box thinking are certainly "food groups" throughout my days.</p>
 	
 	<p><a href="/about">Please feel welcome to read more about my background, click here...</a></p>
 {% include image.html url="/images/Amelia.jpg" description="My backyard in Burlington,VT amongst my favorite outdoor places!" %}
